idf_component_register(
			SRCS
				"epgs/epgs.c"
				"epgs/epgs_wrapper.c"
				"epgs/runepgs.c"
				"epgs/Actions/epgs_exposition.c"
				"epgs/Actions/epgs_hello.c"
				"epgs/Actions/epgs_pubNotify.c"
				"epgs/Actions/epgs_subServiceAcceptance.c"
				"epgs/Common/MurmurHash3.c"
				"epgs/Common/ng_command.c"
				"epgs/Common/ng_epgs_hash.c"
				"epgs/Common/ng_hash_table.c"
				"epgs/Common/ng_message.c"
				"epgs/Controller/epgs_controller.c"
				"epgs/DataStructures/epgs_structures.c"
				"epgs/Network/PG.c"
				"epgs/ng_util/ng_json.c"
				"epgs/ng_util/ng_util.c"
				"lora/lora.c"
				"rs485/rs485.c"
				"ssd1306/OLED.c"
				"ssd1306/font.c"
				
			INCLUDE_DIRS
				"."
				"epgs/Actions"
				"epgs/Common"
				"epgs/Controller"
				"epgs/DataStructures"
				"epgs/Network"
				"epgs/ng_util"
				"epgs/"
				"lora/include"
				"rs485/include"
				"ssd1306/include"
				"/home/alberti/esp/v5.0.6/esp-idf/components/driver/include"
				"/home/alberti/esp/v5.0.6/esp-idf/components/esp_ringbuf/include"
				"/home/alberti/esp/v5.0.6/esp-idf/components/esp_hw_support/include"
				"/home/alberti/esp/v5.0.6/esp-idf/components/esp_timer/include"
				"/home/alberti/esp/v5.0.6/esp-idf/components/driver/deprecated"
			)
